force-app/main/default/objects/AWS__c/AWS__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AWS Integration Settings</label>
</CustomObject>