force-app/main/default/objects/AWS__c/fields/AWS_Bucket__c.field-meta.xml
<CustomField>
    <fullName>AWS_Bucket__c</fullName>
    <label>AWS Bucket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>