force-app/main/default/objects/AWS__c/fields/AWS_Integration_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Integration_Account_ID__c</fullName>
    <description>For new opportunities generated by AWS, there needs to be a placeholder account to associate the record to. This field holds the id of the placeholder account</description>
    <label>AWS Integration Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>