force-app/main/default/objects/AWS__c/fields/AWS_Password__c.field-meta.xml
<CustomField>
    <fullName>AWS_Password__c</fullName>
    <label>AWS Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>