force-app/main/default/objects/AWS__c/fields/AWS_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>AWS_Record_Type_ID__c</fullName>
    <description>ID for the record AWS opportunity record type</description>
    <label>AWS Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>