force-app/main/default/objects/AWS__c/fields/AWS_User__c.field-meta.xml
<CustomField>
    <fullName>AWS_User__c</fullName>
    <label>AWS User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>