force-app/main/default/objects/AWS__c/fields/Integration_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_Id__c</fullName>
    <label>Integration User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>