force-app/main/default/objects/AWS__c/fields/Is_CMZ__c.field-meta.xml
<CustomField>
    <fullName>Is_CMZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_CMZ</label>
    <type>Checkbox</type>
</CustomField>