force-app/main/default/objects/AWS__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <length>250</length>
    <type>Text</type>
</CustomField>