force-app/main/default/objects/AWS__c/fields/spmsId__c.field-meta.xml
<CustomField>
    <fullName>spmsId__c</fullName>
    <label>spmsId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>